--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "PRojet3",
+  "name": "projet3",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-      "sass": "sass --watch ./sass/main.scss:./public/css/style.css",
-      "prefix": "postcss ./public/css/style.css --use autoprefixer -d ./public/css/prefixed/"
-    },
+    "sass": "sass --watch ./sass/main.scss:./public/css/style.css",
+    "prefix": "postcss ./public/css/style.css --use autoprefixer -d ./public/css/prefixed/"
+  },
   "repository": {
     "type": "git",
     "url": ""
   },
   "author": "",
   "license": "ISC",
-  "homepage": ""
+  "homepage": "",
+  "dependencies": {
+    "sass": "^1.37.5"
+  },
+  "devDependencies": {},
+  "description": ""
 }
